--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -28,7 +28,7 @@
   <a href="https://github.com/lomereiter/sambamba"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png" alt="Fork me on GitHub" width="144px" height="144px"></a>
   <div class="container">
 
-    <div class="row">
+    <div class="myrow">
       <div class="page-header" style="text-align: center">
         <h1>{{ page.title }}</h1>
       </div>
