--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -46,9 +46,9 @@
         {% else %}
         <li><a href="{{ site.baseurl}}/docs/sambamba-view.html">Documentation</a></li>
         {% endif %}
-        <li><a href="https://www.dropbox.com/sh/v05fsb5aarob3xe/iUHgyud31a/sambamba">Downloads</a></li>
-        <li><a href="http://github.com/lomereiter/sambamba">Source code</a></li>
-        <li><a href="http://github.com/lomereiter/sambamba/issues">Report an issue</a></li>
+        <li><a href="https://github.com/lomereiter/sambamba/releases">Downloads</a></li>
+        <li><a href="https://github.com/lomereiter/sambamba">Source code</a></li>
+        <li><a href="https://github.com/lomereiter/sambamba/issues">Report an issue</a></li>
       </ul>
     </div>
 
